# papa_johns

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
app/: config.py  main.py
app/adapters/: akool_faceswap.py  bfl_image.py  exceptions.py  face_crop.py  face_swap.py  fal_faceswap.py  job_store.py  models.py  openai_image.py  queue.py  storage.py
app/api/: deps.py
app/api/routes/: health.py  jobs.py
app/domain/: models.py
app/schemas/: jobs.py
app/services/: job_service.py
app/utils/: face.py  image.py
app/workers/: __main__.py  worker.py
configs/recipes/: poster_01.yaml  poster_02.yaml  poster_03.yaml  poster_04.yaml  poster_05.yaml  poster_06.yaml
docs/: api_contract.md  architecture.md  pipeline.md  poc_scope.md
tests/: conftest.py  test_adapters.py  test_akool_adapter.py  test_api.py  test_bfl_adapter.py  test_domain.py  test_face_crop.py  test_openai_adapter.py  test_worker.py
